--- a/order-api/pom.xml
+++ b/order-api/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     
     <parent>
-        <groupId>com.ailab</groupId>
+        <groupId>olga.ailab</groupId>
         <artifactId>order-service-lab</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
@@ -36,7 +36,7 @@
 
         <!-- 內部模組依賴 -->
         <dependency>
-            <groupId>com.ailab</groupId>
+            <groupId>olga.ailab</groupId>
             <artifactId>common</artifactId>
         </dependency>
     </dependencies>
@@ -44,10 +44,35 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>${lombok.version}</version>
+                        </path>
+                        <path>
+                            <groupId>org.mapstruct</groupId>
+                            <artifactId>mapstruct-processor</artifactId>
+                            <version>${mapstruct.version}</version>
+                        </path>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok-mapstruct-binding</artifactId>
+                            <version>0.2.0</version>
+                        </path>
+                    </annotationProcessorPaths>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>com.ailab.orderapi.OrderApiApplication</mainClass>
+                    <mainClass>olga.ailab.orderapi.OrderApiApplication</mainClass>
                 </configuration>
                 <executions>
                     <execution>
